<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill"
    android:orientation="vertical"
    android:background="#EAF3FA" >

    <TextView
        android:id="@+id/tvareacirculo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/tvareacirculo"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btncalcularpi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="pi"
        android:text="@string/btncalcularpi"
        android:background="@drawable/buttons"
        	style="@style/button_text" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvarea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvarea"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvigual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvigual"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvpi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvpi"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tvmul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvmul"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/etpi"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number|numberDecimal|numberSigned" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <TextView
        android:id="@+id/tvresultado"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearLayout1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="26dp"
        android:text="@string/tvresultado"
        android:textSize="20sp" />

</RelativeLayout>