<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:miformula="http://schemas.android.com/apk/res-auto" >
    <!-- Search, should appear as action button -->
    <!-- Share, should always be in the overflow -->
    <item android:id="@+id/action_share"
          android:icon="@drawable/ic_action_share"
          android:title="@string/action_share"
          miformula:showAsAction="always"
          miformula:actionProviderClass="android.support.v7.widget.ShareActionProvider" />
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
          android:icon="@drawable/ic_action_overflow"
          android:title="@string/action_settings"
          android:showAsAction="always" >
                  <menu>
            <item 
                android:id="@+id/action_divi"
                android:orderInCategory="100"
                android:title="@string/action_divi"
                miformula:showAsAction="always"/>
            <item 
                android:id="@+id/action_compartelo"
                android:orderInCategory="100"
                android:title="@string/action_compartelo"
                miformula:showAsAction="always"/>
        </menu>
    </item>
</menu>
