<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center|top"
        android:orientation="vertical"
        android:weightSum="1"
        android:background="#EAF3FA" >

        <TextView
            android:id="@+id/tvecuacionpg"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/tvecuacionpg"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvresultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btncalcularecuacionsimple"
            android:layout_alignParentStart="true"
            android:text="@string/tvresultado"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btncalcularecuacionsimple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:onClick="calcularecuacionsimple"
            android:text="@string/btncalcularecuacionsimple"
            android:background="@drawable/buttons"
        	style="@style/button_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvresultado"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tvecuacionpg"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/etecsimple1"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/adex"
                android:inputType="number|numberDecimal|numberSigned" >

<requestFocus /></EditText>

            <TextView
                android:id="@+id/tvsum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvsum"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/etecsimple4"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/b"
                android:inputType="number|numberDecimal|numberSigned" />

            <TextView
                android:id="@+id/tvigual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvigual"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/etecsimple2"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/cdex"
                android:inputType="number|numberDecimal|numberSigned" >
                
            </EditText>

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvsum"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/etecsimple3"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/d"
                android:inputType="number|numberDecimal|numberSigned" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:weightSum="0"
        android:background="#EAF3FA" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.97"
            android:ems="10"
            android:enabled="false"
            android:inputType="textMultiLine"
            android:text="@string/lo_que_se"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>