<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAF3FA" >

    <Button
        android:id="@+id/btneliminarformula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="eliminar"
        android:text="@string/btneliminarformula"
        android:background="@drawable/buttons"
        style="@style/button_text" />

    <TextView
        android:id="@+id/tvnombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="42dp"
        android:text="@string/tvnombre"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etcontenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btneliminarformula"
        android:layout_below="@+id/tvnombre"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/contform"
        android:inputType="textMultiLine"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etbusqueda"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvnombre"
        android:layout_toRightOf="@+id/tvnombre"
        android:ems="10"
        android:hint="@string/numbsc"
        android:inputType="number"
        android:textSize="16sp">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnbuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buscar"
        android:text="@string/btnbuscar"
        android:background="@drawable/buttons"
        style="@style/button_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>