<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill"
    android:orientation="vertical"
    android:background="#EAF3FA" >

    <TextView
        android:id="@+id/tvconversionarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/tvconversionarea"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etconversiones"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="number|numberDecimal|numberSigned" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etconversiones"
        android:layout_alignEnd="@+id/tvresultado"
        android:text="@string/tva"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/tvb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etconversiones"
        android:layout_toEndOf="@+id/etconversiones"
        android:text="@string/tvb"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="45sp" />

    <Button
        android:id="@+id/btnarea2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="acres"
        android:text="@string/btnarea2"
        android:background="@drawable/buttons"
        	style="@style/button_text" />

    <Button
        android:id="@+id/btnarea1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnarea2"
        android:layout_alignParentStart="true"
        android:onClick="hectareas"
        android:text="@string/btnarea1"
        android:background="@drawable/buttons"
        	style="@style/button_text" />

    <TextView
        android:id="@+id/tvresultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tva"
        android:layout_toStartOf="@+id/etconversiones"
        android:text="@string/tvresultado"
        android:textSize="20sp" />

</RelativeLayout>